kubernetes/operators/elastic/kibana/app/destinationrule.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/destinationrule_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kibana
  namespace: elastic
spec:
  host: kibana-kb-http.elastic.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
