kubernetes/operators/elastic/kibana/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kibana
  namespace: elastic
spec:
  hosts:
    - kibana.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kibana-kb-http.elastic.svc.cluster.local
            port:
              number: 5601
          headers:
            request:
              set:
                x-forwarded-proto: https
